# AI-Customer-Support

./: README.md  pyproject.toml
docs/: API.md  DEPLOYMENT.md
support/: __init__.py  channels.py  cli.py  config.py  cs_store.py  erp.py  forwarding.py  gateway.py  handlers.py  setup.py  state.py  telegram_gateway.py  translation.py
support/dashboard/: api.py
support/dashboard/static/: chat.html
support/infra/: __init__.py  health.py
tests/: conftest.py  test_config.py  test_cs_store.py  test_dashboard_api.py  test_health.py  test_keyed_queue.py  test_model_router.py
